# CppExternalSourceLibs

./: README.md
alglib/: link.url
alglib/3.19.0/: CMakeLists.txt
pugixml/: link.url
pugixml/1.14/: CMakeLists.txt
